<resources>
    <string name="app_name">JPStudy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JPStudy</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Header combo strings -->
    <string name="nav_header_subtitle">Hello</string>
    <string name="nav_header_learnedkanji">6</string>
    <string name="nav_header_daysinrow">25</string>
    <string name="nav_header_timetostudyleft">30 min</string>

    <!-- Menu items -->
    <string name="menu_home">About the program</string>
    <string name="menu_search">Search</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_kana">Alphabet</string>
    <string name="menu_kanjiKeys">Keys</string>
    <string name="menu_myLists">My lists</string>
    <string name="menu_kanjiBeginner">Beginner 1</string>
    <string name="menu_kanjiBeginnerTwo">Beginner 2</string>
    <string name="menu_kanjiBeginnerThree">Beginner 3</string>
    <string name="menu_kanjiBeginnerFour">Beginner 4</string>
    <string name="menu_kanjiBeginnerFive">Beginner 5</string>
    <string name="menu_kanjiBeginnerSix">Beginner 6</string>
    <string name="menu_kanjiMiddle">Middle</string>
    <string name="menu_kanjiHigh">High</string>
    <string name="menu_kanjiAnother">Another kanji</string>
    <string name="menu_grammar">Grammar</string>
    <string name="menu_dictionary">Dictionary</string>
    <string name="menu_settings">More</string>

    <!--Sample strings-->
    <string name="kanji10_List">10 kanji</string>
    <string name="countKanji_List">1/8</string>
    <string name="lastSeen_List">2 weeks ago</string>

    <string name="kanji_DetailInfo">Kanji</string>
    <string name="strokeCount_DetailInfo">Stroke count</string>
    <string name="unicode_DetailInfo">Unicode</string>
    <string name="jlpt_DetailInfo">JLPT</string>
    <string name="heisigEn_DetailInfo">Heisig en.</string>
    <string name="grade_DetailInfo">Grade</string>
    <string name="kunyomi_DetailInfo">Kunyomi</string>
    <string name="onyomi_DetailInfo">Onyomi</string>
    <string name="meanings_DetailInfo">Meanings</string>
    <string name="nameReadings_DetailInfo">Name readings</string>
    <string name="image_DetailInfo">Img how to stroke</string>

    <string name="hiragana_KanaDetailInfo">Hiragana</string>
    <string name="katakana_KanaDetailInfo">Katakana</string>
    <string name="transcription_KanaDetailInfo">Transcription</string>
    <string name="image_KanaDetailInfo">Img how to stroke</string>

    <string name="learnAlphabet_Kana">Get tested</string>

    <!--Home strings-->
    <string name="title_HomePage">Recommendation to learn japanese</string>
    <string name="warning_HomePage">The study does not have to be done only in this way.</string>
    <string name="firstStep_HomePage">1. The basis of the entire language is the alphabet (kana),
        consisting of two alphabets: hiragana and katakana. Hiragana is used in Japanese words,
        and katakana is used in loan words such as English. To start studying, open the alphabet tab and view the
        alphabet itself, in order to see the kana, click on it in more detail. To consolidate what you have learned,
        take the tests, for this you will need to click the "Hiragana" or "Katakana" button in this tab to consolidate
        what you have learned. </string>
    <string name="secondStep_HomePage">2. After learning the alphabet, you should start learning kanji (hieroglyphs).
        To do this, open the tab with the kanji, then browse through them and click on the kanji for details and a spelling diagram.
        After you memorize them, you can take tests to consolidate what you have learned. </string>
    <string name="thirdStep_HomePage">3. In parallel with the study of kanji, you should learn grammar in Japanese,
        for this there is a corresponding tab "Grammar". It describes the basic topics for understanding basic Japanese. </string>
    <string name="fourthStep_HomePage">4. If necessary, you can use the dictionary. To do this, open the "Dictionary" tab
        and enter the information you want to find in the search field. </string>

    <!--Samples for textViews-->
    <string name="kanji_sample">草</string>
    <string name="kunyomi_sample">くさ</string>
    <string name="onyomi_sample">ソー</string>
    <string name="hiragana_sample">あ</string>
    <string name="katakana_sample">ア</string>
    <string name="romanji_sample">a</string>
    <string name="grade_sample">1</string>
    <string name="strokeCount_sample">1</string>
    <string name="heisigEn_sample">Asia</string>
    <string name="unicode_sample">4e00</string>
    <string name="meanings_sample">Asia</string>
    <string name="nameReadings_sample">かず</string>

    <!--Edit text-->
    <string name="search_Hint">Write something</string>

    <!--Samples for Buttons-->
    <string name="button_startLearn">Start test</string>
    <string name="button_startLearn_Hiragana">Hiragana</string>
    <string name="button_startLearn_Katakana">Katakana</string>

    <!--ShowDialogs-->
    <!--Dialog in kanji and kana tests-->
    <string name="resultText_Dialog">Result</string>
    <string name="correctText_Dialog">Correct:</string>
    <string name="wrongText_Dialog">Wrong:</string>
    <string name="scoreText_Dialog">Progress:</string>

    <!--Toasts-->
    <!--Wrong and correct in tests-->
    <string name="correctText_Toast">Correct!</string>
    <string name="wrongText_Toast">Wrong!</string>
    <!--Alert about successful score reset in settings-->
    <string name="successfulScoreReset_Toast">Successful score reset</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="kanji_header">Kanji</string>
    <string name="help_header">Help</string>

    <!--Kanji Preferences-->
    <string name="kanji_title">Reset kanji score</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="resetScoreTitle_Settings">Reset score</string>
    <string name="resetScoreDescription_Settings">Reset score in all kanji levels</string>
    <string name="suggestionTitle_Settings">Make a suggestion</string>
    <string name="suggestionDescription_Settings">Suggest what can be improved in the app</string>
    <string name="bugReportTitle_Settings">Report about error</string>
    <string name="bugReportDescription_Settings">Write about a bug in the application</string>
    <!--Score-->
    <string name="saved_high_score_default_key">0</string>
    <string name="saved_high_score_key">SCORE_BEGINNERKANJI1_KEY</string>
    <string name="preference_file_key">Score</string>

</resources>