<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            app:title="@string/kanji_header">

        <Preference
                app:key="resetScore"
                app:title="@string/resetScoreTitle_Settings"
                app:summary="@string/resetScoreDescription_Settings"/>

    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/help_header">

        <Preference
                app:key="feedback"
                app:title="@string/suggestionTitle_Settings"
                app:summary="@string/suggestionDescription_Settings"/>

        <Preference
                app:key="bugReport"
                app:title="@string/bugReportTitle_Settings"
                app:summary="@string/bugReportTitle_Settings"/>

    </PreferenceCategory>

</PreferenceScreen>