<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_search"
                android:icon="@drawable/ic_baseline_search_24"
                android:title="@string/menu_search"/>
        <item
                android:id="@+id/nav_favourite"
                android:icon="@drawable/ic_baseline_favorite_24"
                android:title="@string/menu_favourite"/>
        <item
                android:id="@+id/nav_kana"
                android:icon="@drawable/ic_kana"
                android:title="@string/menu_kana"/>
        <item
                android:id="@+id/nav_keysofkanji"
                android:icon="@drawable/ic_partofkanji"
                android:title="@string/menu_kanjiKeys"/>
        <item
                android:id="@+id/nav_userlistofkanji"
                android:icon="@drawable/ic_baseline_list_24"
                android:title="@string/menu_myLists"/>
        <item
                android:id="@+id/nav_beginnerkanji"
                android:icon="@drawable/ic_chiisai"
                android:title="@string/menu_kanjiBeginner"/>
        <item
                android:id="@+id/nav_middlekanji"
                android:icon="@drawable/ic_naka"
                android:title="@string/menu_kanjiMiddle"/>
        <item
                android:id="@+id/nav_highkanji"
                android:icon="@drawable/ic_ookii"
                android:title="@string/menu_kanjiHigh"/>
        <item
                android:id="@+id/nav_anotherkanji"
                android:icon="@drawable/ic_anotherkanji"
                android:title="@string/menu_kanjiAnother"/>
        <item
                android:id="@+id/nav_grammar"
                android:icon="@drawable/ic_grammar"
                android:title="@string/menu_grammar"/>
        <item
                android:id="@+id/nav_dictionary"
                android:icon="@drawable/ic_translation"
                android:title="@string/menu_dictionary"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/menu_settings"/>


    </group>
</menu>