<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.bigil.jpstudy.ui.home.HomeFragment"
            android:label="@string/menu_search"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_gallery"
            android:name="com.bigil.jpstudy.ui.gallery.GalleryFragment"
            android:label="@string/menu_favourite"
            tools:layout="@layout/fragment_gallery"/>

    <fragment
            android:id="@+id/nav_slideshow"
            android:name="com.bigil.jpstudy.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_kana"
            tools:layout="@layout/fragment_slideshow"/>

    <fragment
            android:id="@+id/nav_grammar"
            android:name="com.bigil.jpstudy.ui.grammar.GrammarFragment"
            android:label="@string/menu_grammar"
            tools:layout="@layout/fragment_slideshow"/>

    <fragment
            android:id="@+id/nav_dictionary"
            android:name="com.bigil.jpstudy.ui.dictionary.DictionaryFragment"
            android:label="@string/menu_dictionary"
            tools:layout="@layout/fragment_slideshow"/>



</navigation>