<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">
        <!--Icon with first kanji in list-->
        <TextView
                android:id="@+id/textViewFirstKanjiCardInBeginnerKanji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kanji_sample"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="50sp"/>
        <TextView
                android:id="@+id/textViewCurrentNumberBeginnerKanji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:text="@string/countKanji_List"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_toEndOf="@id/textViewFirstKanjiCardInBeginnerKanji"/>
        <TextView
                android:id="@+id/textView10KanjiBeginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="10dp"
                android:text="@string/kanji10_List"
                android:textColor="@android:color/black"
                android:layout_toEndOf="@id/textViewCurrentNumberBeginnerKanji"/>
        <TextView
                android:id="@+id/textViewClickedLastTimeBeginnerKanji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="14dp"
                android:text="@string/lastSeen_List"
                android:textStyle="italic"
                android:textColor="@android:color/black"
                android:layout_toEndOf="@id/textViewFirstKanjiCardInBeginnerKanji"
                android:layout_below="@id/textViewCurrentNumberBeginnerKanji"/>
        <View
                android:id="@+id/separatorBeginnerKanji"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="@android:color/black"
                android:layout_toEndOf="@id/textView10KanjiBeginner"/>
        <!--<ImageButton
                android:id="@+id/buttonStartLearningBeginnerKanji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/separatorBeginnerKanji"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_start_learning"/>-->

    </RelativeLayout>


</androidx.cardview.widget.CardView>